# ai-challenge

./: README.md  pyproject.toml
src/: analyzer.py  app.py  models.py  parser.py
tests/: test_analyzer.py  test_parser.py
